fix text scaling on smaller screens

--- a/assets/sass/single.scss
+++ b/assets/sass/single.scss
@@ -218,7 +218,7 @@ header { // The header/top section of a post, pretty self explanatory
 
     .section-jumbo {
         h1 {
-            font-size: 64px;
+            font-size: 96px;
         }
     }
 }
@@ -247,7 +247,7 @@ header { // The header/top section of a post, pretty self explanatory
 
     .section-jumbo {
         h1 {
-            font-size: 52px;
+            font-size: 84px;
         }
     }
 
